<resources>
    <string name="app_name">VerticalGarden</string>
    <string name="desc_eye_button">Deskripsi tombol mata</string>
    <string name="sign_up">Sign Up</string>
    <string name="editprofile">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_google">Icon Google</string>
    <string name="tabitemmoncon">Tab Item MonCon</string>
    <string name="tabitemeval">Tab Item Eval</string>
    <string name="tabitemplantinfo">Tab Item Plant Info</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="buttonlogin">Login</string>
    <string name="text_button_sign_up">Sign Up</string>
    <string name="text_button_forgot_password">Forgot Password?</string>
    <string name="logo_vertical_garden">logo_vertical_garden</string>
    <string name="viewpage">viewpage</string>
    <string name="default_web_client_id">975845627953-1fb620shb3m09dlvarjfrbt95k1ejk55.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="waktu_panen">Prediction of Plant Condition</string>
    <string name="kesehatan_tanaman">Plant Health</string>
    <string name="probabilitas_gagal_panen">Probability of Crop Failure</string>
    <string name="monitoring">MONITORING</string>
    <string name="controling">CONTROLLING</string>
    <string name="moncon_temperature">Hum &amp; Temp</string>
    <string name="moncon_nutritions">Nutritions</string>
    <string name="moncon_ph">pH</string>
    <string name="moncon_water">Water</string>
    <string name="text_tab_plant_info">PLANT INFO</string>
    <string name="text_tab_evaluation">EVALUATION</string>
    <string name="text_tab_monitoring_amp_controling"><![CDATA[MONITORING & CONTROLING]]></string>
    <string name="text_header_vertical">VERTICAL</string>
    <string name="text_header_garden">HYDROPONICS</string>
    <string name="hi">Hi,</string>
    <string name="username">Username</string>
    <string name="dashboard_settings">DASHBOARD</string>
    <string name="reset_password_settings">RESET PASSWORD</string>
    <string name="logout_settings">Logout</string>
    <string name="backgroundprofile">backgroundprofile</string>
    <string name="logobarusettings">logobarusettings</string>
    <string name="buttonlogoutsettings">buttonlogoutsettings</string>
    <string name="buttonresetpasssettings">buttonresetpasssettings</string>
    <string name="buttondashboardsettings">buttondashboardsettings</string>
    <string name="usernamesettings">usernamesettings</string>
    <string name="texthisettings">texthisettings</string>
    <string name="backgroundprofile2">backgroundprofile2</string>
    <string name="nilai_probgagalpanen">0 %</string>
    <string name="nilai_planthealth">0 %</string>
    <string name="nilai_waktupanen">0 Days</string>
    <string name="applynutritions">APPLY</string>
    <string name="add_nutritions">Add Nutritions</string>
    <string name="applyphdown">APPLY</string>
    <string name="add_ph_down">Add pH Down</string>
    <string name="applyph">APPLY</string>
    <string name="add_ph">Add pH</string>
    <string name="applywater">APPLY</string>
    <string name="add_water">Add Water</string>
    <string name="iconwatermonitoring">iconwatermonitoring</string>
    <string name="iconnutrisimonitoring">iconnutrisimonitoring</string>
    <string name="iconphmonitoring">iconphmonitoring</string>
    <string name="icontempmonitoring">icontempmonitoring</string>
    <string name="Auto_switch">Auto</string>
    <string name="Manual_switch">Manual</string>
    <string name="_0_c">0°C</string>
    <string name="_0ppm">0ppm</string>
    <string name="_0">0</string>
    <string name="__0">0%</string>
    <string name="recwater">recwater</string>
    <string name="recph">recph</string>
    <string name="recnutrisi">recnutrisi</string>
    <string name="rectemp">rectemp</string>
    <string name="uploadpict">uploadpict</string>
    <string name="takeapict">takeapict</string>
</resources>