<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_green"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/backgroundprofile"
        android:layout_width="238dp"
        android:layout_height="327dp"
        android:background="@drawable/bgprofile"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/backgroundprofile"/>
    <ImageView
        android:id="@+id/backgroundprofile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/profilenew"
        android:layout_marginStart="70dp"
        android:layout_marginTop="98dp"
        android:contentDescription="@string/backgroundprofile2"/>
    <TextView
        android:id="@+id/hiusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/backgroundprofile"
        android:text="@string/hi"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/interextrabold"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/texthisettings"/>
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/hiusername"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/interextrabold"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/usernamesettings"/>
    <Button
        android:id="@+id/buttondashboard"
        android:layout_below="@id/username"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/settingbutton"
        android:text="@string/dashboard_settings"
        android:textColor="@color/Green"
        android:fontFamily="@font/intersemibold"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/buttondashboardsettings"/>
    <Button
        android:id="@+id/buttonresetpass"
        android:layout_below="@id/buttondashboard"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/settingbutton"
        android:text="@string/reset_password_settings"
        android:textColor="@color/Green"
        android:fontFamily="@font/intersemibold"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/buttonresetpasssettings"/>
    <Button
        android:id="@+id/buttonlogout"
        android:layout_below="@id/buttonresetpass"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/logout_settings"
        android:textColor="@color/white"
        android:fontFamily="@font/intersemibold"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/buttonlogoutsettings"/>
    <ImageView
        android:id="@+id/logotabsetting"
        android:layout_below="@id/buttonlogout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logobaru"
        android:contentDescription="@string/logobarusettings"/>

</RelativeLayout>