<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonConFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/monitoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitoring"
            android:fontFamily="@font/interextrabold"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:textColor="@color/black"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/monitoring">
            <ImageView
                android:id="@+id/recwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_monitoring"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/iconWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/water"
                app:layout_constraintStart_toStartOf="@id/recwater"
                app:layout_constraintTop_toTopOf="@id/recwater"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/textmonconwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moncon_water"
                android:fontFamily="@font/interextrabold"
                android:textColor="@color/Green"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/iconWater"
                app:layout_constraintStart_toStartOf="@id/iconWater"
                app:layout_constraintEnd_toEndOf="@id/iconWater"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/nilaiwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "0%"
                android:fontFamily="@font/interextrabold"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textmonconwater"
                app:layout_constraintStart_toStartOf="@id/recwater"
                app:layout_constraintEnd_toEndOf="@id/recwater"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/recph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_monitoring"
                android:padding="10dp"
                app:layout_constraintStart_toEndOf="@id/recwater"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="40dp"/>
            <ImageView
                android:id="@+id/iconph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ph"
                app:layout_constraintStart_toStartOf="@id/recph"
                app:layout_constraintTop_toTopOf="@id/recph"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/textmonconph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moncon_ph"
                android:fontFamily="@font/interextrabold"
                android:textColor="@color/Green"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/iconph"
                app:layout_constraintStart_toStartOf="@id/iconph"
                app:layout_constraintEnd_toEndOf="@id/iconph"
                android:layout_marginStart="1dp"/>
            <TextView
                android:id="@+id/nilaiph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "0"
                android:fontFamily="@font/interextrabold"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textmonconph"
                app:layout_constraintStart_toStartOf="@id/recph"
                app:layout_constraintEnd_toEndOf="@id/recph"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/recnutrisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_monitoring"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recwater"/>
            <ImageView
                android:id="@+id/iconnutrisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nutrisi"
                app:layout_constraintStart_toStartOf="@id/recnutrisi"
                app:layout_constraintTop_toTopOf="@id/recnutrisi"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/textmonconnutrisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moncon_nutritions"
                android:fontFamily="@font/interextrabold"
                android:textColor="@color/Green"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/iconnutrisi"
                app:layout_constraintStart_toStartOf="@id/iconnutrisi"
                app:layout_constraintEnd_toEndOf="@id/iconnutrisi"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/nilainutrisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "0ppm"
                android:fontFamily="@font/interextrabold"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textmonconnutrisi"
                app:layout_constraintStart_toStartOf="@id/recnutrisi"
                app:layout_constraintEnd_toEndOf="@id/recnutrisi"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/rectemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_monitoring"
                android:padding="10dp"
                app:layout_constraintStart_toEndOf="@id/recnutrisi"
                app:layout_constraintTop_toBottomOf="@id/recph"
                android:layout_marginStart="40dp"/>
            <ImageView
                android:id="@+id/icontemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/temp"
                app:layout_constraintStart_toStartOf="@id/rectemp"
                app:layout_constraintTop_toTopOf="@id/rectemp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/textmoncontemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moncon_temperature"
                android:fontFamily="@font/interextrabold"
                android:textColor="@color/Green"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/icontemp"
                app:layout_constraintStart_toStartOf="@id/icontemp"
                app:layout_constraintEnd_toEndOf="@id/icontemp"
                android:layout_marginStart="45dp"/>
            <TextView
                android:id="@+id/nilaintemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "0°C"
                android:fontFamily="@font/interextrabold"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textmoncontemp"
                app:layout_constraintStart_toStartOf="@id/rectemp"
                app:layout_constraintEnd_toEndOf="@id/rectemp"
                android:layout_marginStart="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/controling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controling"
            android:fontFamily="@font/interextrabold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/monitoring"
            android:paddingTop="320dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/inputwater"
            android:layout_width="211dp"
            android:layout_height="58dp"
            android:layout_below="@+id/controling"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_controling"
            android:drawableStart="@drawable/water"
            android:drawablePadding="25dp"
            android:fontFamily="@font/interregular"
            android:gravity="start|center_vertical"
            android:hint="Add Water"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
        <Button
            android:id="@+id/applywater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonapply"
            android:text="APPLY"
            android:textColor="@color/white"
            android:layout_marginStart="260dp"
            android:layout_below="@+id/controling"/>
        <EditText
            android:id="@+id/inputphup"
            android:layout_width="211dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_controling"
            android:drawableStart="@drawable/ph"
            android:drawablePadding="25dp"
            android:fontFamily="@font/interregular"
            android:gravity="start|center_vertical"
            android:hint="Add pH Up"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:layout_below="@+id/inputwater"/>
        <Button
            android:id="@+id/applyphup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonapply"
            android:text="APPLY"
            android:textColor="@color/white"
            android:layout_marginStart="260dp"
            android:layout_below="@+id/applywater"/>
        <EditText
            android:id="@+id/inputphdown"
            android:layout_width="211dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_controling"
            android:drawableStart="@drawable/ph"
            android:drawablePadding="25dp"
            android:fontFamily="@font/interregular"
            android:gravity="start|center_vertical"
            android:hint="Add pH Down"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:layout_below="@+id/inputphup"/>
        <Button
            android:id="@+id/applyphdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonapply"
            android:text="APPLY"
            android:textColor="@color/white"
            android:layout_marginStart="260dp"
            android:layout_below="@+id/applyphup"/>
        <EditText
            android:id="@+id/inputnutrisi"
            android:layout_width="211dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_controling"
            android:drawableStart="@drawable/ph"
            android:drawablePadding="25dp"
            android:fontFamily="@font/interregular"
            android:gravity="start|center_vertical"
            android:hint="Add Nutritions"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:layout_below="@+id/inputphdown"/>
        <Button
            android:id="@+id/applynutrisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonapply"
            android:text="APPLY"
            android:textColor="@color/white"
            android:layout_marginStart="260dp"
            android:layout_marginBottom="62dp"
            android:layout_below="@+id/applyphdown"/>
    </RelativeLayout>
</ScrollView>